@@ -26,6 +26,7 @@ import java.time.format.DateTimeFormatterBuilder;
 import java.time.temporal.ChronoField;
 import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.Comparator;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.LinkedHashMap;
@@ -34,34 +35,44 @@ import java.util.Map;
 import java.util.Objects;
 import java.util.Optional;
 import java.util.Set;
+import java.util.concurrent.atomic.AtomicInteger;
 import java.util.stream.Collectors;
 
-import org.apache.commons.collections.CollectionUtils;
-import org.apache.commons.collections.MapUtils;
+import org.apache.commons.collections4.CollectionUtils;
+import org.apache.commons.collections4.MapUtils;
+import org.apache.commons.lang3.ObjectUtils;
 import org.apache.commons.lang3.StringUtils;
 import org.apache.commons.lang3.tuple.Pair;
 
-import com.google.common.collect.Sets;
+import com.publicissapient.kpidashboard.apis.config.CustomApiConfig;
 import com.publicissapient.kpidashboard.apis.constant.Constant;
 import com.publicissapient.kpidashboard.apis.enums.KPICode;
+import com.publicissapient.kpidashboard.apis.jira.scrum.service.CommittmentReliabilityServiceImpl;
+import com.publicissapient.kpidashboard.apis.model.BuildFrequencyInfo;
 import com.publicissapient.kpidashboard.apis.model.ChangeFailureRateInfo;
 import com.publicissapient.kpidashboard.apis.model.CodeBuildTimeInfo;
 import com.publicissapient.kpidashboard.apis.model.CustomDateRange;
+import com.publicissapient.kpidashboard.apis.model.DSRValidationData;
 import com.publicissapient.kpidashboard.apis.model.DeploymentFrequencyInfo;
+import com.publicissapient.kpidashboard.apis.model.IssueKpiModalValue;
 import com.publicissapient.kpidashboard.apis.model.IterationKpiModalValue;
 import com.publicissapient.kpidashboard.apis.model.KPIExcelData;
 import com.publicissapient.kpidashboard.apis.model.LeadTimeChangeData;
+import com.publicissapient.kpidashboard.apis.model.MeanTimeRecoverData;
+import com.publicissapient.kpidashboard.apis.repotools.model.RepoToolValidationData;
 import com.publicissapient.kpidashboard.common.constant.CommonConstant;
 import com.publicissapient.kpidashboard.common.model.application.AdditionalFilterValue;
+import com.publicissapient.kpidashboard.common.model.application.CycleTimeValidationData;
 import com.publicissapient.kpidashboard.common.model.application.FieldMapping;
 import com.publicissapient.kpidashboard.common.model.application.LeadTimeData;
 import com.publicissapient.kpidashboard.common.model.application.ProjectVersion;
 import com.publicissapient.kpidashboard.common.model.application.ResolutionTimeValidation;
 import com.publicissapient.kpidashboard.common.model.jira.HappinessKpiData;
 import com.publicissapient.kpidashboard.common.model.jira.IssueDetails;
-import com.publicissapient.kpidashboard.common.model.jira.IterationPotentialDelay;
+import com.publicissapient.kpidashboard.common.model.jira.JiraHistoryChangeLog;
 import com.publicissapient.kpidashboard.common.model.jira.JiraIssue;
 import com.publicissapient.kpidashboard.common.model.jira.JiraIssueCustomHistory;
+import com.publicissapient.kpidashboard.common.model.jira.JiraIssueReleaseStatus;
 import com.publicissapient.kpidashboard.common.model.jira.KanbanIssueCustomHistory;
 import com.publicissapient.kpidashboard.common.model.jira.KanbanJiraIssue;
 import com.publicissapient.kpidashboard.common.model.jira.ReleaseVersion;
@@ -85,6 +96,7 @@ public class KPIExcelUtility {
 	private static final DecimalFormat df2 = new DecimalFormat(".##");
 	private static final String STATUS = "Status";
 	private static final String WEEK = "Week";
+	private static final String UNDEFINED = "Undefined";
 
 	private KPIExcelUtility() {
 	}
@@ -93,15 +105,15 @@ public class KPIExcelUtility {
 	 * This method populate the excel data for DIR KPI
 	 *
 	 * @param sprint
-	 * 	sprint
+	 *            sprint
 	 * @param storyIds
-	 * 	storyIds
+	 *            storyIds
 	 * @param defects
-	 * 	defects
+	 *            defects
 	 * @param kpiExcelData
-	 * 	kpiExcelData
+	 *            kpiExcelData
 	 * @param issueData
-	 * 	issueData
+	 *            issueData
 	 */
 	public static void populateDirExcelData(String sprint, List<String> storyIds, List<JiraIssue> defects,
 			List<KPIExcelData> kpiExcelData, Map<String, JiraIssue> issueData) {
@@ -113,6 +125,7 @@ public class KPIExcelUtility {
 				KPIExcelData excelData = new KPIExcelData();
 				excelData.setSprintName(sprint);
 				excelData.setLinkedDefects(linkedDefects);
+
 				if (MapUtils.isNotEmpty(issueData)) {
 					JiraIssue jiraIssue = issueData.get(story);
 					if (null != jiraIssue) {
@@ -148,12 +161,13 @@ public class KPIExcelUtility {
 						excelData.setStoryId(storyId);
 						if (StringUtils.isNotEmpty(fieldMapping.getEstimationCriteria())
 								&& fieldMapping.getEstimationCriteria().equalsIgnoreCase(CommonConstant.STORY_POINT)) {
-							excelData.setStoryPoint(jiraIssue.getStoryPoints().toString());
+							excelData.setStoryPoint(String.valueOf(roundingOff(jiraIssue.getStoryPoints())));
 						} else if (null != jiraIssue.getAggregateTimeOriginalEstimateMinutes()) {
-							Double originalEstimateInHours = Double.valueOf(jiraIssue.getAggregateTimeOriginalEstimateMinutes())
-									/ 60;
-							excelData.setStoryPoint(originalEstimateInHours / fieldMapping.getStoryPointToHourMapping()
-									+ "/" + originalEstimateInHours + " hrs");
+							Double originalEstimateInHours = Double
+									.valueOf(jiraIssue.getAggregateTimeOriginalEstimateMinutes()) / 60;
+							excelData.setStoryPoint(
+									roundingOff(originalEstimateInHours / fieldMapping.getStoryPointToHourMapping())
+											+ "/" + roundingOff(originalEstimateInHours) + " hrs");
 						}
 					}
 				}
@@ -190,15 +204,15 @@ public class KPIExcelUtility {
 	 * present in conditional list then Constant.EXCEL_YES else "N" kpi specific
 	 *
 	 * @param sprint
-	 * 	sprint
+	 *            sprint
 	 * @param totalBugList
-	 * 	Map of total bug
+	 *            Map of total bug
 	 * @param conditionDefects
-	 * 	conditionDefects
+	 *            conditionDefects
 	 * @param kpiExcelData
-	 * 	kpiExcelData
+	 *            kpiExcelData
 	 * @param kpiId
-	 * 	kpiId
+	 *            kpiId
 	 */
 	public static void populateDefectRelatedExcelData(String sprint, Map<String, JiraIssue> totalBugList,
 			List<JiraIssue> conditionDefects, List<KPIExcelData> kpiExcelData, String kpiId) {
@@ -218,9 +232,6 @@ public class KPIExcelUtility {
 				if (kpiId.equalsIgnoreCase(KPICode.DEFECT_REMOVAL_EFFICIENCY.getKpiId())) {
 					excelData.setRemovedDefect(present);
 				}
-				if (kpiId.equalsIgnoreCase(KPICode.DEFECT_SEEPAGE_RATE.getKpiId())) {
-					excelData.setEscapedDefect(present);
-				}
 				if (kpiId.equalsIgnoreCase(KPICode.DEFECT_REJECTION_RATE.getKpiId())) {
 					excelData.setRejectedDefect(present);
 				}
@@ -228,6 +239,43 @@ public class KPIExcelUtility {
 				kpiExcelData.add(excelData);
 			});
 		}
+	}
+
+	/**
+	 *
+	 * @param sprint
+	 *            sprint
+	 * @param totalBugList
+	 *            totalBugList
+	 * @param dsrValidationDataList
+	 *            dsrValidationDataList
+	 * @param excelDataList
+	 *            excelDataList
+	 */
+	public static void populateDefectSeepageRateExcelData(String sprint, Map<String, JiraIssue> totalBugList,
+			List<DSRValidationData> dsrValidationDataList, List<KPIExcelData> excelDataList) {
+
+		Map<String, String> labelWiseValidationData = dsrValidationDataList.stream()
+				.collect(Collectors.toMap(DSRValidationData::getIssueNumber, DSRValidationData::getLabel,
+						(x, y) -> x + CommonConstant.COMMA + y));
+		totalBugList.forEach((defectId, jiraIssue) -> {
+			String label = Constant.EMPTY_STRING;
+			String present = Constant.EMPTY_STRING;
+			if (labelWiseValidationData.containsKey(defectId)) {
+				present = Constant.EXCEL_YES;
+				label = StringUtils.capitalize(labelWiseValidationData.get(defectId));
+			}
+			KPIExcelData excelData = new KPIExcelData();
+			excelData.setSprintName(sprint);
+			excelData.setIssueDesc(checkEmptyName(jiraIssue));
+			Map<String, String> defectIdDetails = new HashMap<>();
+			defectIdDetails.put(defectId, checkEmptyURL(jiraIssue));
+			setSquads(excelData, jiraIssue);
+			excelData.setDefectId(defectIdDetails);
+			excelData.setEscapedDefect(present);
+			excelData.setEscapedIdentifier(label);
+			excelDataList.add(excelData);
+		});
 	}
 
 	/**
@@ -240,7 +288,7 @@ public class KPIExcelUtility {
 	 * @param kpiId
 	 */
 	public static void populateDefectRelatedExcelData(String sprint, List<JiraIssue> jiraIssues,
-			List<KPIExcelData> kpiExcelData, String kpiId) {
+			List<KPIExcelData> kpiExcelData, String kpiId, CustomApiConfig customApiConfig) {
 		if (CollectionUtils.isNotEmpty(jiraIssues)) {
 			jiraIssues.stream().forEach(jiraIssue -> {
 				KPIExcelData excelData = new KPIExcelData();
@@ -251,7 +299,35 @@ public class KPIExcelUtility {
 				defectIdDetails.put(jiraIssue.getNumber(), checkEmptyURL(jiraIssue));
 				excelData.setDefectId(defectIdDetails);
 				if (kpiId.equalsIgnoreCase(KPICode.DEFECT_COUNT_BY_PRIORITY.getKpiId())) {
-					excelData.setPriority(jiraIssue.getPriority());
+					List<String> priorities;
+					String priority;
+					if (StringUtils.containsIgnoreCase(
+							customApiConfig.getpriorityP1().replaceAll(Constant.WHITESPACE, "").trim(),
+							jiraIssue.getPriority().replaceAll(Constant.WHITESPACE, "").toLowerCase().trim())) {
+						priorities = Arrays.asList("P1 - Blocker", "p1");
+						priority = Constant.P1;
+						setIssuePriority(jiraIssue, excelData, priorities, priority);
+					} else if (StringUtils.containsIgnoreCase(
+							customApiConfig.getpriorityP2().replaceAll(Constant.WHITESPACE, "").trim(),
+							jiraIssue.getPriority().replaceAll(Constant.WHITESPACE, "").toLowerCase().trim())) {
+						priorities = Arrays.asList("P2 - Critical", "p2");
+						priority = Constant.P2;
+						setIssuePriority(jiraIssue, excelData, priorities, priority);
+					} else if (StringUtils.containsIgnoreCase(
+							customApiConfig.getpriorityP3().replaceAll(Constant.WHITESPACE, "").trim(),
+							jiraIssue.getPriority().replaceAll(Constant.WHITESPACE, "").toLowerCase().trim())) {
+						priorities = Arrays.asList("P3 - Major", "p3");
+						priority = Constant.P3;
+						setIssuePriority(jiraIssue, excelData, priorities, priority);
+					} else if (StringUtils.containsIgnoreCase(
+							customApiConfig.getpriorityP4().replaceAll(Constant.WHITESPACE, "").trim(),
+							jiraIssue.getPriority().replaceAll(Constant.WHITESPACE, "").toLowerCase().trim())) {
+						priorities = Arrays.asList("P4 - Minor", "p4");
+						priority = Constant.P4;
+						setIssuePriority(jiraIssue, excelData, priorities, priority);
+					} else {
+						excelData.setPriority(Constant.MISC + "- " + jiraIssue.getPriority());
+					}
 				}
 				if (kpiId.equalsIgnoreCase(KPICode.DEFECT_COUNT_BY_RCA.getKpiId())) {
 					excelData.setRootCause(jiraIssue.getRootCauseList());
@@ -259,6 +335,15 @@ public class KPIExcelUtility {
 
 				kpiExcelData.add(excelData);
 			});
+		}
+	}
+
+	private static void setIssuePriority(JiraIssue jiraIssue, KPIExcelData excelData, List<String> priorities,
+			String priority) {
+		if (priorities.contains(jiraIssue.getPriority())) {
+			excelData.setPriority(jiraIssue.getPriority());
+		} else {
+			excelData.setPriority(priority + "- " + jiraIssue.getPriority());
 		}
 	}
 
@@ -277,14 +362,16 @@ public class KPIExcelUtility {
 				excelData.setIssueType(jiraIssue.getTypeName());
 				populateAssignee(jiraIssue, excelData);
 				setSquads(excelData, jiraIssue);
+
 				if (null != jiraIssue.getStoryPoints() && StringUtils.isNotEmpty(fieldMapping.getEstimationCriteria())
 						&& fieldMapping.getEstimationCriteria().equalsIgnoreCase(CommonConstant.STORY_POINT)) {
-					excelData.setStoryPoint(String.valueOf(jiraIssue.getStoryPoints()));
+					excelData.setStoryPoint(String.valueOf(roundingOff(jiraIssue.getStoryPoints())));
 				}
-				if (null != jiraIssue.getOriginalEstimateMinutes()
+				if (null != jiraIssue.getAggregateTimeOriginalEstimateMinutes()
 						&& StringUtils.isNotEmpty(fieldMapping.getEstimationCriteria())
 						&& fieldMapping.getEstimationCriteria().equalsIgnoreCase(CommonConstant.ACTUAL_ESTIMATION)) {
-					excelData.setStoryPoint((jiraIssue.getOriginalEstimateMinutes() / 60 + " hrs"));
+					excelData.setStoryPoint(
+							(roundingOff((double) jiraIssue.getAggregateTimeOriginalEstimateMinutes() / 60) + " hrs"));
 				}
 				excelData.setRootCause(jiraIssue.getRootCauseList());
 				excelData.setPriority(jiraIssue.getPriority());
@@ -298,19 +385,23 @@ public class KPIExcelUtility {
 	 * TO GET Constant.EXCEL_YES/"N" from complete list of defects if defect is
 	 * present in conditional list then Constant.EXCEL_YES else
 	 * Constant.EMPTY_STRING kpi specific
-	 *  @param sprint
+	 *
+	 * @param sprint
 	 * @param totalStoriesMap
 	 * @param createdConditionStories
 	 * @param closedIssuesWithStatus
 	 * @param kpiExcelData
 	 */
-	public static void populateCreatedVsResolvedExcelData(String sprint, Map<String, JiraIssue> totalStoriesMap, List<JiraIssue> createdConditionStories,
-														  Map<String, String> closedIssuesWithStatus, List<KPIExcelData> kpiExcelData) {
+	public static void populateCreatedVsResolvedExcelData(String sprint, Map<String, JiraIssue> totalStoriesMap,
+			List<JiraIssue> createdConditionStories, Map<String, String> closedIssuesWithStatus,
+			List<KPIExcelData> kpiExcelData) {
 		if (MapUtils.isNotEmpty(totalStoriesMap)) {
 			List<String> createdConditionalList = createdConditionStories.stream().map(JiraIssue::getNumber)
 					.collect(Collectors.toList());
 			totalStoriesMap.forEach((storyId, jiraIssue) -> {
-				String resolvedStatus = closedIssuesWithStatus.containsKey(storyId) ? closedIssuesWithStatus.get(storyId) : Constant.EMPTY_STRING;
+				String resolvedStatus = closedIssuesWithStatus.containsKey(storyId)
+						? closedIssuesWithStatus.get(storyId)
+						: Constant.EMPTY_STRING;
 				String createdAfterSprint = createdConditionalList.contains(storyId) ? Constant.EXCEL_YES
 						: Constant.EMPTY_STRING;
 				KPIExcelData excelData = new KPIExcelData();
@@ -362,14 +453,14 @@ public class KPIExcelUtility {
 				if (kpiId.equalsIgnoreCase(KPICode.UNIT_TEST_COVERAGE.getKpiId())
 						|| kpiId.equalsIgnoreCase(KPICode.UNIT_TEST_COVERAGE_KANBAN.getKpiId())) {
 					excelData.setUnitCoverage(kpiSpecificDataList.get(i));
-				}
-				if (kpiId.equalsIgnoreCase(KPICode.SONAR_TECH_DEBT.getKpiId())
+				} else if (kpiId.equalsIgnoreCase(KPICode.SONAR_TECH_DEBT.getKpiId())
 						|| kpiId.equalsIgnoreCase(KPICode.SONAR_TECH_DEBT_KANBAN.getKpiId())) {
 					excelData.setTechDebt(kpiSpecificDataList.get(i));
-				}
-				if (kpiId.equalsIgnoreCase(KPICode.SONAR_VIOLATIONS.getKpiId())
+				} else if (kpiId.equalsIgnoreCase(KPICode.SONAR_VIOLATIONS.getKpiId())
 						|| kpiId.equalsIgnoreCase(KPICode.SONAR_VIOLATIONS_KANBAN.getKpiId())) {
 					excelData.setSonarViolation(kpiSpecificDataList.get(i));
+				} else if (kpiId.equalsIgnoreCase(KPICode.SONAR_CODE_QUALITY.getKpiId())) {
+					excelData.setCodeQuality(kpiSpecificDataList.get(i));
 				}
 				setSonarKpiWeekDayMonthColumn(versionDate.get(i), excelData, kpiId);
 				kpiExcelData.add(excelData);
@@ -378,12 +469,12 @@ public class KPIExcelUtility {
 	}
 
 	private static void setSonarKpiWeekDayMonthColumn(String versionDate, KPIExcelData excelData, String kpiId) {
-
 		if (kpiId.equalsIgnoreCase(KPICode.UNIT_TEST_COVERAGE.getKpiId())
 				|| kpiId.equalsIgnoreCase(KPICode.SONAR_TECH_DEBT.getKpiId())
 				|| kpiId.equalsIgnoreCase(KPICode.SONAR_VIOLATIONS.getKpiId())) {
 			excelData.setWeeks(versionDate);
-
+		} else if (kpiId.equalsIgnoreCase(KPICode.SONAR_CODE_QUALITY.getKpiId())) {
+			excelData.setMonth(versionDate);
 		} else {
 			excelData.setDayWeekMonth(versionDate);
 		}
@@ -446,7 +537,7 @@ public class KPIExcelUtility {
 		return description;
 	}
 
-	private static String checkEmptyURL(Object object) {
+	protected static String checkEmptyURL(Object object) {
 		String url = "";
 		if (object instanceof JiraIssue) {
 			JiraIssue jiraIssue = (JiraIssue) object;
@@ -475,7 +566,8 @@ public class KPIExcelUtility {
 		}
 		if (object instanceof LeadTimeChangeData) {
 			LeadTimeChangeData leadTimeChangeData = (LeadTimeChangeData) object;
-			url = StringUtils.isEmpty(leadTimeChangeData.getUrl()) ? Constant.EMPTY_STRING : leadTimeChangeData.getUrl();
+			url = StringUtils.isEmpty(leadTimeChangeData.getUrl()) ? Constant.EMPTY_STRING
+					: leadTimeChangeData.getUrl();
 		}
 		return url;
 
@@ -542,12 +634,14 @@ public class KPIExcelUtility {
 						&& fieldMapping.getEstimationCriteria().equalsIgnoreCase(CommonConstant.STORY_POINT)) {
 					Double roundingOff = roundingOff(Optional.ofNullable(jiraIssue.getStoryPoints()).orElse(0.0));
 					excelData.setStoryPoint(roundingOff.toString());
-				} else if (null != jiraIssue.getOriginalEstimateMinutes()) {
-					Double totalOriginalEstimate = Double.valueOf(jiraIssue.getOriginalEstimateMinutes()) / 60;
-					excelData.setStoryPoint(roundingOff(totalOriginalEstimate / fieldMapping.getStoryPointToHourMapping()) + "/"
-							+ roundingOff(totalOriginalEstimate) + " hrs");
+				} else if (null != jiraIssue.getAggregateTimeOriginalEstimateMinutes()) {
+					Double totalOriginalEstimate = Double.valueOf(jiraIssue.getAggregateTimeOriginalEstimateMinutes())
+							/ 60;
+					excelData.setStoryPoint(
+							roundingOff(totalOriginalEstimate / fieldMapping.getStoryPointToHourMapping()) + "/"
+									+ roundingOff(totalOriginalEstimate) + " hrs");
 				}
-				setSquads(excelData,jiraIssue);
+				setSquads(excelData, jiraIssue);
 				kpiExcelData.add(excelData);
 			});
 		}
@@ -563,45 +657,45 @@ public class KPIExcelUtility {
 				storyDetails.put(issueDetails.getSprintIssue().getNumber(), checkEmptyURL(issueDetails));
 				excelData.setStoryId(storyDetails);
 				excelData.setIssueDesc(checkEmptyName(issueDetails));
-				setSquads(excelData,jiraIssueMap.get(issueDetails.getSprintIssue().getNumber()));
+				setSquads(excelData, jiraIssueMap.get(issueDetails.getSprintIssue().getNumber()));
 				if (StringUtils.isNotEmpty(fieldMapping.getEstimationCriteria())
 						&& fieldMapping.getEstimationCriteria().equalsIgnoreCase(CommonConstant.STORY_POINT)) {
-					excelData.setStoryPoint(
-							Optional.ofNullable(issueDetails.getSprintIssue().getStoryPoints()).orElse(0.0).toString());
+					excelData.setStoryPoint(String.valueOf(roundingOff(
+							Optional.ofNullable(issueDetails.getSprintIssue().getStoryPoints()).orElse(0.0))));
 				} else if (null != issueDetails.getSprintIssue().getOriginalEstimate()) {
-					Double totalOriginalEstimate = issueDetails.getSprintIssue().getOriginalEstimate() / 60;
+					double totalOriginalEstimate = issueDetails.getSprintIssue().getOriginalEstimate();
 					Double totalOriginalEstimateInHours = totalOriginalEstimate / 60;
-					excelData.setStoryPoint(totalOriginalEstimateInHours / fieldMapping.getStoryPointToHourMapping()
-							+ "/" + totalOriginalEstimate / 60 + " hrs");
+					excelData.setStoryPoint(
+							roundingOff(totalOriginalEstimateInHours / fieldMapping.getStoryPointToHourMapping()) + "/"
+									+ roundingOff(totalOriginalEstimate / 60) + " hrs");
 				}
 				kpiExcelData.add(excelData);
 			}
 		}
 	}
 
-	public static void populateSprintCapacity(String sprint, List<JiraIssue> totalStoriesList,
-			List<KPIExcelData> kpiExcelData) {
-
+	public static void populateSprintCapacity(String sprintName, List<JiraIssue> totalStoriesList,
+			List<KPIExcelData> kpiExcelData, Map<String, Double> loggedTimeIssueMap) {
 		if (CollectionUtils.isNotEmpty(totalStoriesList)) {
-			totalStoriesList.stream().forEach(issue -> {
+			totalStoriesList.forEach(issue -> {
 
 				KPIExcelData excelData = new KPIExcelData();
-				excelData.setSprintName(sprint);
+				excelData.setSprintName(sprintName);
 				Map<String, String> storyDetails = new HashMap<>();
 				storyDetails.put(issue.getNumber(), checkEmptyURL(issue));
 				excelData.setStoryId(storyDetails);
 				excelData.setIssueDesc(checkEmptyName(issue));
-				Double daysLogged = 0.0d;
-				Double daysEstimated = 0.0d;
-				if (issue.getTimeSpentInMinutes() != null) {
-					daysLogged = Double.valueOf(issue.getTimeSpentInMinutes()) / 60;
-				}
-				excelData.setTotalTimeSpent(String.valueOf(daysLogged));
+				setSquads(excelData, issue);
+				String daysEstimated = "0.0";
+				excelData.setTotalTimeSpent(
+						String.valueOf(roundingOff(loggedTimeIssueMap.getOrDefault(issue.getNumber(), 0d))));
 
-				if (issue.getAggregateTimeOriginalEstimateMinutes() != null) {
-					daysEstimated = Double.valueOf(issue.getAggregateTimeOriginalEstimateMinutes()) / 60;
+				if (issue.getAggregateTimeOriginalEstimateMinutes() != null
+						&& issue.getAggregateTimeOriginalEstimateMinutes() > 0) {
+					daysEstimated = String
+							.valueOf(roundingOff(Double.valueOf(issue.getAggregateTimeOriginalEstimateMinutes()) / 60));
 				}
-				excelData.setOriginalTimeEstimate(String.valueOf(daysEstimated));
+				excelData.setOriginalTimeEstimate(daysEstimated);
 				kpiExcelData.add(excelData);
 
 			});
@@ -644,24 +738,46 @@ public class KPIExcelUtility {
 		}
 	}
 
-	public static void populateLeadTime(List<KPIExcelData> kpiExcelData, String projectName,
-			LeadTimeData leadTimeData) {
+	public static void populateLeadTime(List<CycleTimeValidationData> cycleTimeList, List<KPIExcelData> excelDataList) {
+		for (CycleTimeValidationData leadTimeData : cycleTimeList) {
+			KPIExcelData excelData = new KPIExcelData();
+			Map<String, String> storyId = new HashMap<>();
+			storyId.put(leadTimeData.getIssueNumber(), leadTimeData.getUrl());
+			excelData.setIssueID(storyId);
+			excelData.setIssueDesc(leadTimeData.getIssueDesc());
+			excelData.setIssueType(leadTimeData.getIssueType());
+			excelData.setCreatedDate(DateUtil.dateTimeConverter(leadTimeData.getIntakeDate().toString().split("T")[0],
+					DateUtil.DATE_FORMAT, DateUtil.DISPLAY_DATE_FORMAT));
+			excelData.setCloseDate(DateUtil.dateTimeConverter(leadTimeData.getLiveDate().toString().split("T")[0],
+					DateUtil.DATE_FORMAT, DateUtil.DISPLAY_DATE_FORMAT));
+			excelData.setLeadTime(CommonUtils.convertIntoDays(Math.toIntExact(leadTimeData.getLeadTime())));
+			excelDataList.add(excelData);
+		}
+	}
 
-		if (!leadTimeData.getIssueNumber().isEmpty()) {
-			for (int i = 0; i < leadTimeData.getIssueNumber().size(); i++) {
-				KPIExcelData excelData = new KPIExcelData();
-				excelData.setProjectName(projectName);
-				Map<String, String> storyId = new HashMap<>();
-				storyId.put(leadTimeData.getIssueNumber().get(i), leadTimeData.getUrlList().get(i));
-				excelData.setStoryId(storyId);
-				excelData.setIssueDesc(leadTimeData.getIssueDiscList().get(i));
-				excelData.setIntakeToDOR(leadTimeData.getIntakeToDor().get(i));
-				excelData.setDorToDod(leadTimeData.getDorToDOD().get(i));
-				excelData.setDodToLive(leadTimeData.getDodToLive().get(i));
-				excelData.setLeadTime(leadTimeData.getIntakeToLive().get(i));
-
-				kpiExcelData.add(excelData);
-			}
+	/**
+	 *
+	 * @param cycleTimeList
+	 *            cycleTimeList
+	 * @param excelDataList
+	 *            excelDataList
+	 */
+	public static void populateCycleTime(List<CycleTimeValidationData> cycleTimeList,
+			List<KPIExcelData> excelDataList) {
+		for (CycleTimeValidationData leadTimeData : cycleTimeList) {
+			KPIExcelData excelData = new KPIExcelData();
+			Map<String, String> storyId = new HashMap<>();
+			storyId.put(leadTimeData.getIssueNumber(), leadTimeData.getUrl());
+			excelData.setIssueID(storyId);
+			excelData.setIssueDesc(leadTimeData.getIssueDesc());
+			excelData.setIssueType(leadTimeData.getIssueType());
+			if (ObjectUtils.isNotEmpty(leadTimeData.getIntakeTime()))
+				excelData.setIntakeToDOR(CommonUtils.convertIntoDays(Math.toIntExact(leadTimeData.getIntakeTime())));
+			if (ObjectUtils.isNotEmpty(leadTimeData.getDorTime()))
+				excelData.setDorToDod(CommonUtils.convertIntoDays(Math.toIntExact(leadTimeData.getDorTime())));
+			if (ObjectUtils.isNotEmpty(leadTimeData.getDodTime()))
+				excelData.setDodToLive(CommonUtils.convertIntoDays(Math.toIntExact(leadTimeData.getDodTime())));
+			excelDataList.add(excelData);
 		}
 	}
 
@@ -672,14 +788,18 @@ public class KPIExcelUtility {
 	 *
 	 * @param sprint
 	 * @param totalStoriesMap
-	 * @param initialIssueNumber
+	 * @param commitmentReliabilityValidationData
 	 * @param kpiExcelData
 	 */
 
 	public static void populateCommittmentReliability(String sprint, Map<String, JiraIssue> totalStoriesMap,
-			Set<JiraIssue> initialIssueNumber, List<KPIExcelData> kpiExcelData, FieldMapping fieldMapping) {
+			CommittmentReliabilityServiceImpl.CommitmentReliabilityValidationData commitmentReliabilityValidationData,
+			List<KPIExcelData> kpiExcelData, FieldMapping fieldMapping) {
 		if (MapUtils.isNotEmpty(totalStoriesMap)) {
-
+			Set<String> initialIssueNumber = commitmentReliabilityValidationData.getInitialIssueNumber().stream()
+					.map(JiraIssue::getNumber).collect(Collectors.toSet());
+			Set<String> addedIssues = commitmentReliabilityValidationData.getAddedIssues();
+			Set<String> puntedIssues = commitmentReliabilityValidationData.getPuntedIssues();
 			totalStoriesMap.forEach((storyId, jiraIssue) -> {
 				KPIExcelData excelData = new KPIExcelData();
 				excelData.setSprintName(sprint);
@@ -689,15 +809,25 @@ public class KPIExcelUtility {
 				excelData.setStoryId(storyDetails);
 				excelData.setIssueType(jiraIssue.getTypeName());
 				excelData.setIssueStatus(jiraIssue.getStatus());
-				setSquads(excelData,jiraIssue);
-				if (initialIssueNumber.contains(jiraIssue)) {
-					excelData.setInitialCommited("Y");
+				setSquads(excelData, jiraIssue);
+				if (initialIssueNumber.contains(storyId)) {
+					excelData.setScopeValue(CommonConstant.INITIAL);
 				}
+				if (addedIssues.contains(storyId)) {
+					excelData.setScopeValue(CommonConstant.ADDED);
+				}
+				// Removed Issue is implicit showing Initial is there in sprint.
+				if (puntedIssues.contains(storyId)) {
+					excelData.setScopeValue(CommonConstant.REMOVED);
+				}
+
 				if (StringUtils.isNotEmpty(fieldMapping.getEstimationCriteria())
 						&& fieldMapping.getEstimationCriteria().equalsIgnoreCase(CommonConstant.STORY_POINT)) {
-					excelData.setStoryPoint(Optional.ofNullable(jiraIssue.getStoryPoints()).orElse(0.0).toString());
-				} else if (null != jiraIssue.getOriginalEstimateMinutes()) {
-					excelData.setStoryPoint(jiraIssue.getOriginalEstimateMinutes() / 60 + " hrs");
+					Double roundingOff = roundingOff(Optional.ofNullable(jiraIssue.getStoryPoints()).orElse(0.0));
+					excelData.setStoryPoint(roundingOff.toString());
+				} else if (null != jiraIssue.getAggregateTimeOriginalEstimateMinutes()) {
+					excelData.setStoryPoint(
+							roundingOff((double) jiraIssue.getAggregateTimeOriginalEstimateMinutes() / 60) + " hrs");
 				}
 
 				kpiExcelData.add(excelData);
@@ -718,7 +848,7 @@ public class KPIExcelUtility {
 					excelData.setEpicID(epicLink);
 					excelData.setEpicName(checkEmptyName(epic));
 					excelData.setCostOfDelay(epic.getCostOfDelay());
-					setSquads(excelData,epic);
+					setSquads(excelData, epic);
 					String month = Constant.EMPTY_STRING;
 					String epicEndDate = Constant.EMPTY_STRING;
 					if (epic.getChangeDate() != null) {
@@ -727,7 +857,7 @@ public class KPIExcelUtility {
 								.appendFraction(ChronoField.MICRO_OF_SECOND, 1, 9, false).optionalEnd().toFormatter();
 						LocalDateTime dateTime = LocalDateTime.parse(epic.getChangeDate(), formatter);
 						month = dateTime.format(DateTimeFormatter.ofPattern(MONTH_YEAR_FORMAT));
-						epicEndDate = dateTime.format(DateTimeFormatter.ofPattern(DATE_YEAR_MONTH_FORMAT));
+						epicEndDate = dateTime.format(DateTimeFormatter.ofPattern(DateUtil.DISPLAY_DATE_FORMAT));
 					}
 					excelData.setMonth(month);
 					excelData.setEpicEndDate(epicEndDate);
@@ -755,62 +885,6 @@ public class KPIExcelUtility {
 					setSquads(excelData, epic);
 					kpiExcelData.add(excelData);
 				}
-			});
-		}
-	}
-
-	public static void populateDailyClosureExcelData(List<KPIExcelData> excelDataList, List<JiraIssue> issuesExcel,
-			FieldMapping fieldMapping, Map<String, IterationPotentialDelay> issueWiseDelay,
-			List<JiraIssue> completedIssue) {
-
-		if (CollectionUtils.isNotEmpty(issuesExcel)) {
-			issuesExcel.forEach(e -> {
-				KPIExcelData excelData = new KPIExcelData();
-				Map<String, String> epicLink = new HashMap<>();
-				epicLink.put(e.getNumber(), checkEmptyURL(e));
-				excelData.setIssueType(e.getTypeName());
-				excelData.setIssueID(epicLink);
-				excelData.setIssueDesc(e.getName());
-				excelData.setIssueStatus(e.getStatus());
-				populateAssignee(e, excelData);
-				if (StringUtils.isNotEmpty(fieldMapping.getEstimationCriteria())
-						&& fieldMapping.getEstimationCriteria().equalsIgnoreCase(CommonConstant.STORY_POINT)) {
-					excelData.setStoryPoint(Optional.ofNullable(e.getStoryPoints()).orElse(0.0).toString());
-				} else if (null != e.getOriginalEstimateMinutes()) {
-					excelData.setStoryPoint(e.getOriginalEstimateMinutes() / 60 + " hrs");
-				}
-				String date = "-";
-				if (StringUtils.isNotEmpty(e.getDueDate())) {
-					date = DateUtil.dateTimeConverter(e.getDueDate(), DateUtil.TIME_FORMAT_WITH_SEC,
-							DateUtil.DISPLAY_DATE_FORMAT);
-				}
-				excelData.setDueDate(date);
-				if (e.getRemainingEstimateMinutes() != null) {
-					String remEstimate = CommonUtils.convertIntoDays(e.getRemainingEstimateMinutes());
-					excelData.setRemainingEstimateMinutes(StringUtils.isNotEmpty(remEstimate) ? remEstimate : "0m");
-				}
-				if (issueWiseDelay.containsKey(e.getNumber())) {
-					IterationPotentialDelay iterationPotentialDelay = issueWiseDelay.get(e.getNumber());
-					excelData.setPotentialDelay(String.valueOf(iterationPotentialDelay.getPotentialDelay()) + "d");
-					excelData.setPredictedCompletionDate(
-							DateUtil.dateTimeConverter(iterationPotentialDelay.getPredictedCompletedDate(),
-									DateUtil.DATE_FORMAT, DateUtil.DISPLAY_DATE_FORMAT));
-
-				} else {
-					excelData.setPotentialDelay("-");
-					excelData.setPredictedCompletionDate("-");
-				}
-				Optional<JiraIssue> completedJiraIssue = completedIssue.stream()
-						.filter(jiraIssue -> jiraIssue.getNumber().equals(e.getNumber())).findFirst();
-
-				if (completedJiraIssue.isPresent() && Objects.nonNull(completedJiraIssue.get().getUpdateDate())) {
-					excelData.setActualCompletionDate(
-							DateUtil.dateTimeConverter(completedJiraIssue.get().getUpdateDate(), DateUtil.DATE_FORMAT,
-									DateUtil.DISPLAY_DATE_FORMAT));
-				} else {
-					excelData.setActualCompletionDate("-");
-				}
-				excelDataList.add(excelData);
 			});
 		}
 	}
@@ -853,7 +927,7 @@ public class KPIExcelUtility {
 				excelData.setProjectName(projectName);
 				excelData.setReleaseName(pv.getName());
 				excelData.setReleaseDesc(pv.getDescription());
-				excelData.setReleaseEndDate(pv.getReleaseDate().toString(DATE_YEAR_MONTH_FORMAT));
+				excelData.setReleaseEndDate(pv.getReleaseDate().toString(DateUtil.DISPLAY_DATE_FORMAT));
 				excelData.setMonth(pv.getReleaseDate().toString(MONTH_YEAR_FORMAT));
 				kpiExcelData.add(excelData);
 
@@ -952,94 +1026,206 @@ public class KPIExcelUtility {
 		}
 	}
 
-	public static void populateMeanTimeMergeExcelData(String projectName, List<Map<String, Double>> repoWiseMRList,
-			List<String> repoList, List<String> branchList, List<KPIExcelData> kpiExcelData) {
+	/**
+	 * populate excel data function for build frequency kpi
+	 *
+	 * @param kpiExcelData
+	 * @param projectName
+	 * @param buildFrequencyInfo
+	 */
 
-		if (CollectionUtils.isNotEmpty(repoWiseMRList)) {
-			for (int i = 0; i < repoWiseMRList.size(); i++) {
-				Map<String, Double> repoWiseMap = repoWiseMRList.get(i);
-				for (Map.Entry<String, Double> m : repoWiseMap.entrySet()) {
-					KPIExcelData excelData = new KPIExcelData();
-					excelData.setProject(projectName);
-					excelData.setRepo(repoList.get(i));
-					excelData.setBranch(branchList.get(i));
-					excelData.setDaysWeeks(m.getKey());
-					excelData.setMeanTimetoMerge(m.getValue().toString());
-					kpiExcelData.add(excelData);
-				}
+	public static void populateBuildFrequency(List<KPIExcelData> kpiExcelData, String projectName,
+			BuildFrequencyInfo buildFrequencyInfo) {
 
-			}
+		for (int i = 0; i < buildFrequencyInfo.getBuildJobList().size(); i++) {
+			KPIExcelData excelData = new KPIExcelData();
+			excelData.setProjectName(projectName);
+			excelData.setJobName(buildFrequencyInfo.getBuildJobList().get(i));
+			Map<String, String> buildUrl = new HashMap<>();
+			buildUrl.put(buildFrequencyInfo.getBuildUrlList().get(i), buildFrequencyInfo.getBuildUrlList().get(i));
+			excelData.setBuildUrl(buildUrl);
+			excelData.setStartDate(buildFrequencyInfo.getBuildStartTimeList().get(i));
+			excelData.setWeeks(buildFrequencyInfo.getWeeksList().get(i));
+			kpiExcelData.add(excelData);
 		}
-
 	}
 
-	public static void populatePickupTimeExcelData(String projectName, List<Map<String, Double>> repoWiseMRList,
-			List<String> repoList, List<String> branchList, List<KPIExcelData> kpiExcelData) {
-
-		if (CollectionUtils.isNotEmpty(repoWiseMRList)) {
-			for (int i = 0; i < repoWiseMRList.size(); i++) {
-				Map<String, Double> repoWiseMap = repoWiseMRList.get(i);
-				for (Map.Entry<String, Double> m : repoWiseMap.entrySet()) {
-					KPIExcelData excelData = new KPIExcelData();
-					excelData.setProject(projectName);
-					excelData.setRepo(repoList.get(i));
-					excelData.setBranch(branchList.get(i));
-					excelData.setWeeks(m.getKey());
-					excelData.setPickupTime(m.getValue().toString());
-					kpiExcelData.add(excelData);
-				}
-
-			}
+	public static void populateMeanTimeMergeExcelData(List<RepoToolValidationData> repoToolValidationDataList,
+			List<KPIExcelData> kpiExcelData) {
+		if (CollectionUtils.isNotEmpty(repoToolValidationDataList)) {
+			repoToolValidationDataList.forEach(repoToolValidationData -> {
+				KPIExcelData excelData = new KPIExcelData();
+				excelData.setProject(repoToolValidationData.getProjectName());
+				excelData.setRepo(repoToolValidationData.getRepoUrl());
+				excelData.setBranch(repoToolValidationData.getBranchName());
+				excelData.setDeveloper(repoToolValidationData.getDeveloperName());
+				excelData.setDaysWeeks(repoToolValidationData.getDate());
+				excelData.setMeanTimetoMerge(repoToolValidationData.getMeanTimeToMerge().toString());
+				Map<String, String> mergeUrl = new HashMap<>();
+				mergeUrl.put(repoToolValidationData.getMergeRequestUrl(), repoToolValidationData.getMergeRequestUrl());
+				excelData.setMergeRequestUrl(mergeUrl);
+				kpiExcelData.add(excelData);
+			});
 		}
-
 	}
 
-	public static void populatePRSizeExcelData(String projectName, List<Map<String, Long>> repoWiseMRList,
-												   List<String> repoList, List<String> branchList, List<KPIExcelData> kpiExcelData) {
-
-		if (CollectionUtils.isNotEmpty(repoWiseMRList)) {
-			for (int i = 0; i < repoWiseMRList.size(); i++) {
-				Map<String, Long> repoWiseMap = repoWiseMRList.get(i);
-				for (Map.Entry<String, Long> m : repoWiseMap.entrySet()) {
-					KPIExcelData excelData = new KPIExcelData();
-					excelData.setProject(projectName);
-					excelData.setRepo(repoList.get(i));
-					excelData.setBranch(branchList.get(i));
-					excelData.setWeeks(m.getKey());
-					excelData.setPrSize(m.getValue().toString());
-					kpiExcelData.add(excelData);
-				}
-
-			}
+	public static void populatePickupTimeExcelData(List<RepoToolValidationData> repoToolValidationDataList,
+			List<KPIExcelData> kpiExcelData) {
+		if (CollectionUtils.isNotEmpty(repoToolValidationDataList)) {
+			repoToolValidationDataList.forEach(repoToolValidationData -> {
+				KPIExcelData excelData = new KPIExcelData();
+				excelData.setProject(repoToolValidationData.getProjectName());
+				excelData.setRepo(repoToolValidationData.getProjectName());
+				excelData.setBranch(repoToolValidationData.getBranchName());
+				excelData.setDeveloper(repoToolValidationData.getDeveloperName());
+				excelData.setDaysWeeks(repoToolValidationData.getDate());
+				excelData.setPickupTime(String.format("%.2f", repoToolValidationData.getPickupTime()));
+				excelData.setNumberOfMerge(String.valueOf(repoToolValidationData.getMrCount()));
+				kpiExcelData.add(excelData);
+			});
 		}
-
 	}
 
-	public static void populateCodeCommit(String projectName, List<Map<String, Long>> repoWiseCommitList,
-			List<String> repoList, List<String> branchList, List<KPIExcelData> kpiExcelData,
-			List<Map<String, Long>> repoWiseMergeRequestList) {
+	public static void populatePRSizeExcelData(List<RepoToolValidationData> repoToolValidationDataList,
+			List<KPIExcelData> kpiExcelData) {
+		if (CollectionUtils.isNotEmpty(repoToolValidationDataList)) {
+			repoToolValidationDataList.forEach(repoToolValidationData -> {
+				KPIExcelData excelData = new KPIExcelData();
+				excelData.setProject(repoToolValidationData.getProjectName());
+				excelData.setRepo(repoToolValidationData.getRepoUrl());
+				excelData.setBranch(repoToolValidationData.getBranchName());
+				excelData.setDeveloper(repoToolValidationData.getDeveloperName());
+				excelData.setDaysWeeks(repoToolValidationData.getDate());
+				excelData.setPrSize(String.valueOf(repoToolValidationData.getPrSize()));
+				excelData.setNumberOfMerge(String.valueOf(repoToolValidationData.getMrCount()));
+				kpiExcelData.add(excelData);
+			});
+		}
+	}
 
-		if (CollectionUtils.isNotEmpty(repoWiseCommitList) && CollectionUtils.isNotEmpty(repoWiseMergeRequestList)) {
-			for (int i = 0; i < repoWiseCommitList.size(); i++) {
-				Map<String, Long> repoWiseCommitMap = repoWiseCommitList.get(i);
-				Map<String, Long> repoWiseMergeMap = repoWiseMergeRequestList.get(i);
+	public static void populateReworkRateExcelData(List<RepoToolValidationData> repoToolValidationDataList,
+			List<KPIExcelData> kpiExcelData) {
+		if (CollectionUtils.isNotEmpty(repoToolValidationDataList)) {
+			repoToolValidationDataList.forEach(repoToolValidationData -> {
+				KPIExcelData excelData = new KPIExcelData();
+				excelData.setProject(repoToolValidationData.getProjectName());
+				excelData.setRepo(repoToolValidationData.getRepoUrl());
+				excelData.setBranch(repoToolValidationData.getBranchName());
+				excelData.setDeveloper(repoToolValidationData.getDeveloperName());
+				excelData.setDaysWeeks(repoToolValidationData.getDate());
+				excelData.setReworkRate(String.format("%.2f", repoToolValidationData.getReworkRate()));
+				kpiExcelData.add(excelData);
+			});
+		}
+	}
 
-				for (String date : Sets.union(repoWiseCommitMap.keySet(), repoWiseMergeMap.keySet())) {
+	public static void populateInnovationRateExcelData(List<RepoToolValidationData> repoToolValidationDataList,
+			List<KPIExcelData> kpiExcelData) {
+		if (CollectionUtils.isNotEmpty(repoToolValidationDataList)) {
+			repoToolValidationDataList.forEach(repoToolValidationData -> {
+				KPIExcelData excelData = new KPIExcelData();
+				excelData.setProject(repoToolValidationData.getProjectName());
+				excelData.setRepo(repoToolValidationData.getRepoUrl());
+				excelData.setBranch(repoToolValidationData.getBranchName());
+				excelData.setDeveloper(repoToolValidationData.getDeveloperName());
+				excelData.setDaysWeeks(repoToolValidationData.getDate());
+				excelData.setAddedLines(repoToolValidationData.getAddedLines());
+				excelData.setTotalLineChanges(repoToolValidationData.getChangedLines());
+				excelData.setInnovationRate(String.format("%.2f", repoToolValidationData.getInnovationRate()));
+				kpiExcelData.add(excelData);
+			});
+		}
+	}
 
-					Long commitHours = repoWiseCommitMap.get(date);
-					Long mergeHours = repoWiseMergeMap.get(date);
-					KPIExcelData excelData = new KPIExcelData();
-					excelData.setProjectName(projectName);
-					excelData.setRepo(repoList.get(i));
-					excelData.setBranch(branchList.get(i));
-					excelData.setDaysWeeks(date);
-					excelData.setNumberOfCommit(commitHours.toString());
-					excelData.setNumberOfMerge(mergeHours.toString());
-					kpiExcelData.add(excelData);
-				}
+	public static void populateDefectRate(List<RepoToolValidationData> repoToolValidationDataList,
+			List<KPIExcelData> kpiExcelData) {
+		if (CollectionUtils.isNotEmpty(repoToolValidationDataList)) {
+			repoToolValidationDataList.forEach(repoToolValidationData -> {
+				KPIExcelData excelData = new KPIExcelData();
+				excelData.setProject(repoToolValidationData.getProjectName());
+				excelData.setRepo(repoToolValidationData.getRepoUrl());
+				excelData.setBranch(repoToolValidationData.getBranchName());
+				excelData.setDeveloper(repoToolValidationData.getDeveloperName());
+				excelData.setDaysWeeks(repoToolValidationData.getDate());
+				excelData.setNumberOfMerge(String.valueOf(repoToolValidationData.getMrCount()));
+				excelData.setDefectPRs(repoToolValidationData.getKpiPRs());
+				excelData.setDefectRate(String.format("%.2f", repoToolValidationData.getDefectRate()));
+				kpiExcelData.add(excelData);
+			});
+		}
+	}
 
-			}
+	public static void populateCodeCommit(List<RepoToolValidationData>repoToolValidationDataList, List<KPIExcelData> kpiExcelData) {
 
+		if (CollectionUtils.isNotEmpty(repoToolValidationDataList)) {
+			repoToolValidationDataList.forEach(repoToolValidationData -> {
+				KPIExcelData excelData = new KPIExcelData();
+				excelData.setProject(repoToolValidationData.getProjectName());
+				excelData.setRepo(repoToolValidationData.getRepoUrl());
+				excelData.setBranch(repoToolValidationData.getBranchName());
+				excelData.setDeveloper(repoToolValidationData.getDeveloperName());
+				excelData.setDaysWeeks(repoToolValidationData.getDate());
+				excelData.setNumberOfCommit(String.valueOf(repoToolValidationData.getCommitCount()));
+				excelData.setNumberOfMerge(String.valueOf(repoToolValidationData.getMrCount()));
+				kpiExcelData.add(excelData);
+			});
+		}
+	}
+
+    public static void populateRevertRateExcelData(List<RepoToolValidationData> repoToolValidationDataList, List<KPIExcelData> kpiExcelData) {
+
+        if (CollectionUtils.isNotEmpty(repoToolValidationDataList)) {
+            repoToolValidationDataList.forEach(repoToolValidationData -> {
+                KPIExcelData excelData = new KPIExcelData();
+                excelData.setProject(repoToolValidationData.getProjectName());
+                excelData.setRepo(repoToolValidationData.getRepoUrl());
+                excelData.setBranch(repoToolValidationData.getBranchName());
+                excelData.setDeveloper(repoToolValidationData.getDeveloperName());
+                excelData.setDaysWeeks(repoToolValidationData.getDate());
+                excelData.setRevertRate(roundingOff(repoToolValidationData.getRevertRate()));
+                excelData.setNumberOfMerge(String.valueOf(repoToolValidationData.getMrCount()));
+				excelData.setRevertPrs(repoToolValidationData.getKpiPRs());
+                kpiExcelData.add(excelData);
+            });
+        }
+
+    }
+
+	public static void populatePRSuccessRateExcelData(List<RepoToolValidationData> repoToolValidationDataList, List<KPIExcelData> kpiExcelData) {
+
+        if (CollectionUtils.isNotEmpty(repoToolValidationDataList)) {
+            repoToolValidationDataList.forEach(repoToolValidationData -> {
+                KPIExcelData excelData = new KPIExcelData();
+                excelData.setProject(repoToolValidationData.getProjectName());
+                excelData.setRepo(repoToolValidationData.getRepoUrl());
+                excelData.setBranch(repoToolValidationData.getBranchName());
+                excelData.setDeveloper(repoToolValidationData.getDeveloperName());
+                excelData.setDaysWeeks(repoToolValidationData.getDate());
+                excelData.setPRSccessRate(roundingOff(repoToolValidationData.getPRSuccessRate()));
+                excelData.setNumberOfMerge(String.valueOf(repoToolValidationData.getKpiPRs()));
+				excelData.setClosedPRs(repoToolValidationData.getMrCount());
+                kpiExcelData.add(excelData);
+            });
+        }
+
+    }
+
+	public static void populatePRDeclineRateExcelData(List<RepoToolValidationData> repoToolValidationDataList,
+			List<KPIExcelData> kpiExcelData) {
+
+		if (CollectionUtils.isNotEmpty(repoToolValidationDataList)) {
+			repoToolValidationDataList.forEach(repoToolValidationData -> {
+				KPIExcelData excelData = new KPIExcelData();
+				excelData.setProject(repoToolValidationData.getProjectName());
+				excelData.setRepo(repoToolValidationData.getRepoUrl());
+				excelData.setBranch(repoToolValidationData.getBranchName());
+				excelData.setDeveloper(repoToolValidationData.getDeveloperName());
+				excelData.setDaysWeeks(repoToolValidationData.getDate());
+				excelData.setPrDeclineRate(roundingOff(repoToolValidationData.getPrDeclineRate()));
+				excelData.setDeclinedPRs(repoToolValidationData.getKpiPRs());
+				excelData.setClosedPRs(repoToolValidationData.getMrCount());
+				kpiExcelData.add(excelData);
+			});
 		}
 	}
 
@@ -1257,21 +1443,19 @@ public class KPIExcelUtility {
 			}
 	}
 
-	public static void populateCodeCommitKanbanExcelData(String projectName, List<Map<String, Long>> repoWiseCommitList,
-			List<String> repoList, List<String> branchList, List<KPIExcelData> kpiExcelData) {
-		if (CollectionUtils.isNotEmpty(repoWiseCommitList) && CollectionUtils.isNotEmpty(repoList)
-				&& CollectionUtils.isNotEmpty(branchList)) {
-			for (int i = 0; i < repoWiseCommitList.size(); i++) {
-				for (String date : repoWiseCommitList.get(i).keySet()) {
-					KPIExcelData excelData = new KPIExcelData();
-					excelData.setProjectName(projectName);
-					excelData.setRepo(repoList.get(i));
-					excelData.setBranch(branchList.get(i));
-					excelData.setDays(date);
-					excelData.setNumberOfCommit(repoWiseCommitList.get(i).get(date).toString());
-					kpiExcelData.add(excelData);
-				}
-			}
+	public static void populateCodeCommitKanbanExcelData(List<RepoToolValidationData> repoToolValidationDataList,
+			List<KPIExcelData> kpiExcelData) {
+		if (CollectionUtils.isNotEmpty(repoToolValidationDataList)) {
+			repoToolValidationDataList.forEach(repoToolValidationData -> {
+				KPIExcelData excelData = new KPIExcelData();
+				excelData.setProjectName(repoToolValidationData.getProjectName());
+				excelData.setRepo(repoToolValidationData.getRepoUrl());
+				excelData.setBranch(repoToolValidationData.getBranchName());
+				excelData.setDeveloper(repoToolValidationData.getDeveloperName());
+				excelData.setDaysWeeks(repoToolValidationData.getDate());
+				excelData.setNumberOfCommit(String.valueOf(repoToolValidationData.getCommitCount()));
+				kpiExcelData.add(excelData);
+			});
 		}
 
 	}
@@ -1303,6 +1487,9 @@ public class KPIExcelUtility {
 			((IterationKpiModalValue) object).setAssignee(assigneeName);
 		} else if (object instanceof KPIExcelData) {
 			((KPIExcelData) object).setAssignee(assigneeName);
+
+		} else if (object instanceof IssueKpiModalValue) {
+			((IssueKpiModalValue) object).setAssignee(assigneeName);
 		}
 	}
 
@@ -1328,14 +1515,15 @@ public class KPIExcelUtility {
 		KPIExcelUtility.populateAssignee(jiraIssue, jiraIssueModalObject);
 		if (null != jiraIssue.getStoryPoints() && StringUtils.isNotEmpty(fieldMapping.getEstimationCriteria())
 				&& fieldMapping.getEstimationCriteria().equalsIgnoreCase(CommonConstant.STORY_POINT)) {
-			jiraIssueModalObject.setIssueSize(jiraIssue.getStoryPoints().toString());
+			jiraIssueModalObject.setIssueSize(df2.format(jiraIssue.getStoryPoints()));
 		}
 		if (null != jiraIssue.getOriginalEstimateMinutes()
 				&& StringUtils.isNotEmpty(fieldMapping.getEstimationCriteria())
 				&& fieldMapping.getEstimationCriteria().equalsIgnoreCase(CommonConstant.ACTUAL_ESTIMATION)) {
 			Double originalEstimateInHours = Double.valueOf(jiraIssue.getOriginalEstimateMinutes()) / 60;
-			jiraIssueModalObject.setIssueSize(originalEstimateInHours / fieldMapping.getStoryPointToHourMapping() + "/"
-					+ originalEstimateInHours + " hrs");
+			jiraIssueModalObject
+					.setIssueSize(roundingOff(originalEstimateInHours / fieldMapping.getStoryPointToHourMapping()) + "/"
+							+ roundingOff(originalEstimateInHours) + " hrs");
 		}
 		jiraIssueModalObject.setDueDate((StringUtils.isNotEmpty(jiraIssue.getDueDate())) ? DateUtil.dateTimeConverter(
 				jiraIssue.getDueDate(), DateUtil.TIME_FORMAT_WITH_SEC, DateUtil.DISPLAY_DATE_FORMAT) : "-");
@@ -1369,25 +1557,121 @@ public class KPIExcelUtility {
 		}
 		jiraIssueModalObject.setTimeSpentInMinutes(CommonUtils.convertIntoDays(jiraIssue.getTimeSpentInMinutes()));
 		if (jiraIssue.getDevDueDate() != null)
-			jiraIssueModalObject.setDevDueDate(jiraIssue.getDevDueDate().split("T")[0]);
+			jiraIssueModalObject.setDevDueDate(DateUtil.dateTimeConverter(jiraIssue.getDevDueDate(),
+					DateUtil.TIME_FORMAT_WITH_SEC, DateUtil.DISPLAY_DATE_FORMAT));
 		else
 			jiraIssueModalObject.setDevDueDate(Constant.DASH);
 
 		if (CollectionUtils.isNotEmpty(fieldMapping.getAdditionalFilterConfig())) {
 			if (CollectionUtils.isNotEmpty(jiraIssue.getAdditionalFilters())) {
 				jiraIssueModalObject
-						.setSquads(jiraIssue
-								.getAdditionalFilters().stream().flatMap(additionalFilter -> additionalFilter
-										.getFilterValues().stream().map(AdditionalFilterValue::getValue))
-								.collect(Collectors.toList()));
+						.setSquads(
+								jiraIssue
+										.getAdditionalFilters().stream().flatMap(additionalFilter -> additionalFilter
+												.getFilterValues().stream().map(AdditionalFilterValue::getValue))
+										.toList());
 
 			} else {
-				jiraIssueModalObject.setSquads(Arrays.asList(Constant.DASH));
+				jiraIssueModalObject.setSquads(List.of(Constant.DASH));
 			}
 		}
 
-		modalValues.add(jiraIssueModalObject);
-		overAllModalValues.add(jiraIssueModalObject);
+		if (modalValues != null && overAllModalValues != null) {
+			modalValues.add(jiraIssueModalObject);
+			overAllModalValues.add(jiraIssueModalObject);
+		} else {
+			modalObjectMap.computeIfPresent(jiraIssue.getNumber(), (k, v) -> jiraIssueModalObject);
+		}
+
+	}
+
+	/**
+	 * Common method to populate modal window of Iteration KPI's
+	 *
+	 * @param jiraIssue
+	 * @param fieldMapping
+	 * @param modalObjectMap
+	 */
+	public static void populateIssueModal(JiraIssue jiraIssue, FieldMapping fieldMapping,
+			Map<String, IssueKpiModalValue> modalObjectMap) {
+		IssueKpiModalValue issueKpiModalValue = modalObjectMap.get(jiraIssue.getNumber());
+		issueKpiModalValue.setIssueId(jiraIssue.getNumber());
+		issueKpiModalValue.setIssueURL(jiraIssue.getUrl());
+		issueKpiModalValue.setDescription(jiraIssue.getName());
+		issueKpiModalValue.setIssueStatus(jiraIssue.getStatus());
+		issueKpiModalValue.setIssueType(jiraIssue.getTypeName());
+		issueKpiModalValue.setPriority(jiraIssue.getPriority());
+		KPIExcelUtility.populateAssignee(jiraIssue, issueKpiModalValue);
+		if (null != jiraIssue.getStoryPoints() && StringUtils.isNotEmpty(fieldMapping.getEstimationCriteria())
+				&& fieldMapping.getEstimationCriteria().equalsIgnoreCase(CommonConstant.STORY_POINT)) {
+			issueKpiModalValue.setIssueSize(df2.format(jiraIssue.getStoryPoints()));
+		}
+		if (null != jiraIssue.getOriginalEstimateMinutes()
+				&& StringUtils.isNotEmpty(fieldMapping.getEstimationCriteria())
+				&& fieldMapping.getEstimationCriteria().equalsIgnoreCase(CommonConstant.ACTUAL_ESTIMATION)) {
+			Double originalEstimateInHours = Double.valueOf(jiraIssue.getOriginalEstimateMinutes()) / 60;
+			issueKpiModalValue
+					.setIssueSize(roundingOff(originalEstimateInHours / fieldMapping.getStoryPointToHourMapping()) + "/"
+							+ roundingOff(originalEstimateInHours) + " hrs");
+		}
+		issueKpiModalValue.setDueDate((StringUtils.isNotEmpty(jiraIssue.getDueDate())) ? DateUtil.dateTimeConverter(
+				jiraIssue.getDueDate(), DateUtil.TIME_FORMAT_WITH_SEC, DateUtil.DISPLAY_DATE_FORMAT) : "-");
+		issueKpiModalValue.setChangeDate(
+				(StringUtils.isNotEmpty(jiraIssue.getChangeDate())) ? jiraIssue.getChangeDate().split("T")[0] : "-");
+		issueKpiModalValue.setCreatedDate(
+				(StringUtils.isNotEmpty(jiraIssue.getCreatedDate())) ? jiraIssue.getCreatedDate().split("T")[0] : "-");
+		issueKpiModalValue.setUpdatedDate(
+				(StringUtils.isNotEmpty(jiraIssue.getUpdateDate())) ? jiraIssue.getUpdateDate().split("T")[0] : "-");
+		issueKpiModalValue.setLabels(jiraIssue.getLabels());
+		issueKpiModalValue.setRootCauseList(jiraIssue.getRootCauseList());
+		issueKpiModalValue.setOwnersFullName(jiraIssue.getOwnersFullName());
+		issueKpiModalValue.setSprintName(jiraIssue.getSprintName());
+		issueKpiModalValue.setResolution(jiraIssue.getResolution());
+		if (CollectionUtils.isNotEmpty(jiraIssue.getReleaseVersions())) {
+			List<ReleaseVersion> releaseVersions = jiraIssue.getReleaseVersions();
+			issueKpiModalValue.setReleaseName(releaseVersions.get(releaseVersions.size() - 1).getReleaseName());
+		}
+		if (jiraIssue.getOriginalEstimateMinutes() != null) {
+			issueKpiModalValue
+					.setOriginalEstimateMinutes(CommonUtils.convertIntoDays(jiraIssue.getOriginalEstimateMinutes()));
+		} else {
+			issueKpiModalValue.setOriginalEstimateMinutes("0d");
+		}
+		if (jiraIssue.getRemainingEstimateMinutes() != null) {
+			String remEstimate = CommonUtils.convertIntoDays(jiraIssue.getRemainingEstimateMinutes());
+			issueKpiModalValue.setRemainingEstimateMinutes(remEstimate);
+			issueKpiModalValue.setRemainingTimeInDays(remEstimate);
+		} else {
+			issueKpiModalValue.setRemainingEstimateMinutes(Constant.DASH);
+		}
+		issueKpiModalValue.setTimeSpentInMinutes(CommonUtils.convertIntoDays(jiraIssue.getTimeSpentInMinutes()));
+		if (jiraIssue.getDevDueDate() != null)
+			issueKpiModalValue.setDevDueDate(DateUtil.dateTimeConverter(jiraIssue.getDevDueDate(),
+					DateUtil.TIME_FORMAT_WITH_SEC, DateUtil.DISPLAY_DATE_FORMAT));
+		else
+			issueKpiModalValue.setDevDueDate(Constant.DASH);
+
+		if (CollectionUtils.isNotEmpty(fieldMapping.getAdditionalFilterConfig())) {
+			if (CollectionUtils.isNotEmpty(jiraIssue.getAdditionalFilters())) {
+				issueKpiModalValue
+						.setSquads(
+								jiraIssue
+										.getAdditionalFilters().stream().flatMap(additionalFilter -> additionalFilter
+												.getFilterValues().stream().map(AdditionalFilterValue::getValue))
+										.toList());
+
+			} else {
+				issueKpiModalValue.setSquads(List.of(Constant.DASH));
+			}
+		}
+
+		List<String> testingPhase = CollectionUtils.isNotEmpty(jiraIssue.getEscapedDefectGroup())
+				? jiraIssue.getEscapedDefectGroup()
+				: List.of(UNDEFINED);
+		issueKpiModalValue.setTestPhaseList(testingPhase);
+
+		modalObjectMap.computeIfPresent(jiraIssue.getNumber(), (k, v) -> issueKpiModalValue);
+
 	}
 
 	/**
@@ -1428,70 +1712,27 @@ public class KPIExcelUtility {
 	/**
 	 * This Method is used for fetching status and Weekname to show the data in
 	 * excel data record
-	 * 
+	 *
 	 * @param weekAndTypeMap
 	 * @param e
 	 */
 	private static HashMap<String, String> getStatusNameAndWeekName(
 			Map<String, Map<String, List<JiraIssue>>> weekAndTypeMap, JiraIssue e) {
 		HashMap<String, String> data = new HashMap<>();
-		for (String week : weekAndTypeMap.keySet()) {
-			for (String type : weekAndTypeMap.get(week).keySet()) {
-				for (JiraIssue issue : weekAndTypeMap.get(week).get(type)) {
+		for (Map.Entry<String, Map<String, List<JiraIssue>>> weekEntry : weekAndTypeMap.entrySet()) {
+			for (Map.Entry<String, List<JiraIssue>> typeEntry : weekEntry.getValue().entrySet()) {
+				for (JiraIssue issue : typeEntry.getValue()) {
 					if (issue.getNumber().equalsIgnoreCase(e.getNumber())) {
-						data.put(STATUS, type);
-						data.put(WEEK, week);
+						data.put(STATUS, typeEntry.getKey());
+						data.put(WEEK, weekEntry.getKey());
 					}
 				}
 			}
 		}
 		return data;
 	}
-
-	public static void populateIterationDataForWastage(List<IterationKpiModalValue> overAllmodalValues,
-			List<IterationKpiModalValue> modalValues, JiraIssue jiraIssue, int blockedTime, int waitTime,
-			FieldMapping fieldMapping) {
-		int wastageTime = blockedTime + waitTime;
-		int originalEstimate = 0;
-		IterationKpiModalValue iterationKpiModalValue = new IterationKpiModalValue();
-		iterationKpiModalValue.setIssueId(jiraIssue.getNumber());
-		iterationKpiModalValue.setIssueURL(jiraIssue.getUrl());
-		iterationKpiModalValue.setDescription(jiraIssue.getName());
-		iterationKpiModalValue.setIssueStatus(jiraIssue.getStatus());
-		iterationKpiModalValue.setIssueType(jiraIssue.getTypeName());
-		iterationKpiModalValue.setPriority(jiraIssue.getPriority());
-		KPIExcelUtility.populateAssignee(jiraIssue, iterationKpiModalValue);
-		if (null != jiraIssue.getStoryPoints() && StringUtils.isNotEmpty(fieldMapping.getEstimationCriteria())
-				&& fieldMapping.getEstimationCriteria().equalsIgnoreCase(CommonConstant.STORY_POINT)) {
-			iterationKpiModalValue.setIssueSize(jiraIssue.getStoryPoints().toString());
-		}
-		if (null != jiraIssue.getOriginalEstimateMinutes()
-				&& StringUtils.isNotEmpty(fieldMapping.getEstimationCriteria())
-				&& fieldMapping.getEstimationCriteria().equalsIgnoreCase(CommonConstant.ACTUAL_ESTIMATION)) {
-			originalEstimate = jiraIssue.getOriginalEstimateMinutes() / 60;
-			iterationKpiModalValue.setIssueSize(originalEstimate + " hrs");
-		}
-		if ((blockedTime != 0)) {
-			iterationKpiModalValue.setBlockedTime(CommonUtils.convertIntoDays(blockedTime));
-		} else {
-			iterationKpiModalValue.setBlockedTime(TIME);
-		}
-		if ((waitTime != 0)) {
-			iterationKpiModalValue.setWaitTime(CommonUtils.convertIntoDays(waitTime));
-		} else {
-			iterationKpiModalValue.setWaitTime(TIME);
-		}
-		if ((wastageTime != 0)) {
-			iterationKpiModalValue.setWastage(CommonUtils.convertIntoDays(wastageTime));
-		} else {
-			iterationKpiModalValue.setWastage(TIME);
-		}
-		modalValues.add(iterationKpiModalValue);
-		overAllmodalValues.add(iterationKpiModalValue);
-	}
-
 	public static void populateReleaseDefectRelatedExcelData(List<JiraIssue> jiraIssues,
-															 List<KPIExcelData> kpiExcelData, FieldMapping fieldMapping) {
+			List<KPIExcelData> kpiExcelData, FieldMapping fieldMapping) {
 		if (CollectionUtils.isNotEmpty(jiraIssues)) {
 			jiraIssues.stream().forEach(jiraIssue -> {
 				KPIExcelData excelData = new KPIExcelData();
@@ -1502,6 +1743,10 @@ public class KPIExcelUtility {
 				excelData.setIssueDesc(checkEmptyName(jiraIssue));
 				excelData.setIssueStatus(jiraIssue.getStatus());
 				excelData.setIssueType(jiraIssue.getTypeName());
+				String testingPhase = CollectionUtils.isNotEmpty(jiraIssue.getEscapedDefectGroup())
+						? jiraIssue.getEscapedDefectGroup().stream().findFirst().orElse(UNDEFINED)
+						: UNDEFINED;
+				excelData.setTestingPhase(testingPhase);
 				populateAssignee(jiraIssue, excelData);
 				excelData.setRootCause(jiraIssue.getRootCauseList());
 				excelData.setPriority(jiraIssue.getPriority());
@@ -1509,10 +1754,12 @@ public class KPIExcelUtility {
 						&& fieldMapping.getEstimationCriteria().equalsIgnoreCase(CommonConstant.STORY_POINT)) {
 					Double roundingOff = roundingOff(Optional.ofNullable(jiraIssue.getStoryPoints()).orElse(0.0));
 					excelData.setStoryPoint(roundingOff.toString());
-				} else if (null != jiraIssue.getOriginalEstimateMinutes()) {
-					Double totalOriginalEstimate = Double.valueOf(jiraIssue.getOriginalEstimateMinutes()) / 60;
-					excelData.setStoryPoint(roundingOff(totalOriginalEstimate / fieldMapping.getStoryPointToHourMapping()) + "/"
-							+ roundingOff(totalOriginalEstimate) + " hrs");
+				} else if (null != jiraIssue.getAggregateTimeOriginalEstimateMinutes()) {
+					Double totalOriginalEstimate = Double.valueOf(jiraIssue.getAggregateTimeOriginalEstimateMinutes())
+							/ 60;
+					excelData.setStoryPoint(
+							roundingOff(totalOriginalEstimate / fieldMapping.getStoryPointToHourMapping()) + "/"
+									+ roundingOff(totalOriginalEstimate) + " hrs");
 				}
 				kpiExcelData.add(excelData);
 			});
@@ -1540,8 +1787,8 @@ public class KPIExcelUtility {
 				excelData.setCreatedDate(date);
 				String updateDate = Constant.EMPTY_STRING;
 				if (jiraIssue.getUpdateDate() != null) {
-					updateDate = DateUtil.dateTimeConverter(jiraIssue.getUpdateDate(),
-							DateUtil.DATE_FORMAT, DateUtil.DISPLAY_DATE_FORMAT);
+					updateDate = DateUtil.dateTimeConverter(jiraIssue.getUpdateDate(), DateUtil.DATE_FORMAT,
+							DateUtil.DISPLAY_DATE_FORMAT);
 				}
 				excelData.setUpdatedDate(updateDate);
 				kpiExcelData.add(excelData);
@@ -1627,8 +1874,8 @@ public class KPIExcelUtility {
 				excelData.setCreatedDate(date);
 				String updateDate = Constant.EMPTY_STRING;
 				if (jiraIssue.getUpdateDate() != null) {
-					updateDate = DateUtil.dateTimeConverter(jiraIssue.getUpdateDate(),
-							DateUtil.DATE_FORMAT, DateUtil.DISPLAY_DATE_FORMAT);
+					updateDate = DateUtil.dateTimeConverter(jiraIssue.getUpdateDate(), DateUtil.DATE_FORMAT,
+							DateUtil.DISPLAY_DATE_FORMAT);
 				}
 				excelData.setUpdatedDate(updateDate);
 				kpiExcelData.add(excelData);
@@ -1642,6 +1889,9 @@ public class KPIExcelUtility {
 			jiraIssues.forEach(jiraIssue -> {
 				KPIExcelData excelData = new KPIExcelData();
 				Map<String, String> issueDetails = new HashMap<>();
+				String testingPhase = CollectionUtils.isNotEmpty(jiraIssue.getEscapedDefectGroup())
+						? jiraIssue.getEscapedDefectGroup().stream().findFirst().orElse(UNDEFINED)
+						: UNDEFINED;
 				issueDetails.put(jiraIssue.getNumber(), checkEmptyURL(jiraIssue));
 				excelData.setIssueID(issueDetails);
 				excelData.setIssueDesc(checkEmptyName(jiraIssue));
@@ -1650,49 +1900,52 @@ public class KPIExcelUtility {
 				excelData.setSprintName(jiraIssue.getSprintName());
 				populateAssignee(jiraIssue, excelData);
 				excelData.setIssueStatus(jiraIssue.getStatus());
+				excelData.setTestingPhase(testingPhase);
 				kpiExcelData.add(excelData);
 			});
 		}
 	}
 
-	public static void populateStoryChunk(String sprintName, Map<String, JiraIssue> totalSprintStoryMap,
+	public static void populateScopeChurn(String sprintName, Map<String, List<JiraIssue>> totalSprintStoryMap,
 			Map<String, String> addedIssueDateMap, Map<String, String> removedIssueDateMap,
 			List<KPIExcelData> excelDataList, FieldMapping fieldMapping) {
 		if (MapUtils.isNotEmpty(totalSprintStoryMap)) {
-
-			totalSprintStoryMap.forEach((storyId, jiraIssue) -> {
+			totalSprintStoryMap.entrySet().stream().flatMap(entry -> entry.getValue().stream().map(jiraIssue -> {
 				KPIExcelData excelData = new KPIExcelData();
 				excelData.setSprintName(sprintName);
 				excelData.setIssueDesc(checkEmptyName(jiraIssue));
 				Map<String, String> storyDetails = new HashMap<>();
-				storyDetails.put(storyId, checkEmptyURL(jiraIssue));
+				storyDetails.put(jiraIssue.getNumber(), checkEmptyURL(jiraIssue));
 				excelData.setIssueID(storyDetails);
 				excelData.setIssueType(jiraIssue.getTypeName());
 				excelData.setIssueDesc(checkEmptyName(jiraIssue));
 				excelData.setIssueStatus(jiraIssue.getStatus());
 				setSquads(excelData, jiraIssue);
-				if (addedIssueDateMap.containsKey(jiraIssue.getNumber())) {
-					excelData.setScopeChange(CommonConstant.ADDED);
+				if (entry.getKey().equals(CommonConstant.ADDED)) {
+					excelData.setScopeChange(entry.getKey());
 					excelData.setScopeChangeDate(addedIssueDateMap.get(jiraIssue.getNumber()));
-				}
-				if (removedIssueDateMap.containsKey(jiraIssue.getNumber())) {
-					excelData.setScopeChange(CommonConstant.REMOVED);
+				} else {
+					excelData.setScopeChange(entry.getKey());
 					excelData.setScopeChangeDate(removedIssueDateMap.get(jiraIssue.getNumber()));
 				}
 				if (StringUtils.isNotEmpty(fieldMapping.getEstimationCriteria())
 						&& fieldMapping.getEstimationCriteria().equalsIgnoreCase(CommonConstant.STORY_POINT)) {
-					excelData.setStoryPoint(Optional.ofNullable(jiraIssue.getStoryPoints()).orElse(0.0).toString());
-				} else if (null != jiraIssue.getOriginalEstimateMinutes()) {
-					excelData.setStoryPoint(jiraIssue.getOriginalEstimateMinutes() / 60 + " hrs");
+					double roundingOff = roundingOff(Optional.ofNullable(jiraIssue.getStoryPoints()).orElse(0.0));
+					excelData.setStoryPoint(Double.toString(roundingOff));
+				} else if (null != jiraIssue.getAggregateTimeOriginalEstimateMinutes()) {
+					double totalOriginalEstimate = Double.valueOf(jiraIssue.getAggregateTimeOriginalEstimateMinutes())
+							/ 60;
+					excelData.setStoryPoint(
+							roundingOff(totalOriginalEstimate / fieldMapping.getStoryPointToHourMapping()) + "/"
+									+ roundingOff(totalOriginalEstimate) + " hrs");
 				}
-				excelDataList.add(excelData);
-
-			});
+				return excelData;
+			})).forEach(excelDataList::add);
 		}
 	}
 
-	public static void populateIterationReadinessExcelData(List<JiraIssue> jiraIssues,
-														   List<KPIExcelData> kpiExcelData, FieldMapping fieldMapping) {
+	public static void populateIterationReadinessExcelData(List<JiraIssue> jiraIssues, List<KPIExcelData> kpiExcelData,
+			FieldMapping fieldMapping) {
 		if (CollectionUtils.isNotEmpty(jiraIssues)) {
 			jiraIssues.stream().forEach(jiraIssue -> {
 				KPIExcelData excelData = new KPIExcelData();
@@ -1707,10 +1960,12 @@ public class KPIExcelUtility {
 						&& fieldMapping.getEstimationCriteria().equalsIgnoreCase(CommonConstant.STORY_POINT)) {
 					Double roundingOff = roundingOff(Optional.ofNullable(jiraIssue.getStoryPoints()).orElse(0.0));
 					excelData.setStoryPoint(roundingOff.toString());
-				} else if (null != jiraIssue.getOriginalEstimateMinutes()) {
-					Double totalOriginalEstimate = Double.valueOf(jiraIssue.getOriginalEstimateMinutes()) / 60;
-					excelData.setStoryPoint(roundingOff(totalOriginalEstimate / fieldMapping.getStoryPointToHourMapping()) + "/"
-							+ roundingOff(totalOriginalEstimate) + " hrs");
+				} else if (null != jiraIssue.getAggregateTimeOriginalEstimateMinutes()) {
+					Double totalOriginalEstimate = Double.valueOf(jiraIssue.getAggregateTimeOriginalEstimateMinutes())
+							/ 60;
+					excelData.setStoryPoint(
+							roundingOff(totalOriginalEstimate / fieldMapping.getStoryPointToHourMapping()) + "/"
+									+ roundingOff(totalOriginalEstimate) + " hrs");
 				}
 				String date = Constant.EMPTY_STRING;
 				if (!jiraIssue.getSprintBeginDate().isEmpty()) {
@@ -1718,22 +1973,14 @@ public class KPIExcelUtility {
 							DateUtil.DISPLAY_DATE_FORMAT);
 				}
 				excelData.setSprintStartDate(date);
-				if (StringUtils.isNotEmpty(fieldMapping.getEstimationCriteria())
-						&& fieldMapping.getEstimationCriteria().equalsIgnoreCase(CommonConstant.STORY_POINT)) {
-					Double roundingOff = roundingOff(Optional.ofNullable(jiraIssue.getStoryPoints()).orElse(0.0));
-					excelData.setStoryPoint(roundingOff.toString());
-				} else if (null != jiraIssue.getOriginalEstimateMinutes()) {
-					Double totalOriginalEstimate = Double.valueOf(jiraIssue.getOriginalEstimateMinutes()) / 60;
-					excelData.setStoryPoint(roundingOff(totalOriginalEstimate / fieldMapping.getStoryPointToHourMapping()) + "/"
-							+ roundingOff(totalOriginalEstimate) + " hrs");
-				}
 				kpiExcelData.add(excelData);
 			});
 		}
 	}
 
 	public static void populateLeadTimeForChangeExcelData(String projectName,
-			Map<String, List<LeadTimeChangeData>> leadTimeMapTimeWise, List<KPIExcelData> kpiExcelData , String leadTimeConfigRepoTool) {
+			Map<String, List<LeadTimeChangeData>> leadTimeMapTimeWise, List<KPIExcelData> kpiExcelData,
+			String leadTimeConfigRepoTool) {
 
 		if (MapUtils.isNotEmpty(leadTimeMapTimeWise)) {
 			leadTimeMapTimeWise.forEach((weekOrMonthName, leadTimeListCurrentTime) -> {
@@ -1741,7 +1988,7 @@ public class KPIExcelUtility {
 					KPIExcelData excelData = new KPIExcelData();
 					excelData.setProjectName(projectName);
 					excelData.setDate(weekOrMonthName);
-					if(CommonConstant.REPO.equals(leadTimeConfigRepoTool)) {
+					if (CommonConstant.REPO.equals(leadTimeConfigRepoTool)) {
 						excelData.setMergeDate(leadTimeChangeData.getClosedDate());
 						excelData.setMergeRequestId(leadTimeChangeData.getMergeID());
 						excelData.setBranch(leadTimeChangeData.getFromBranch());
@@ -1759,17 +2006,37 @@ public class KPIExcelUtility {
 		}
 	}
 
-
 	public static void populateEpicProgessExcelData(Map<String, String> epicWiseIssueSize,
-			Map<String, JiraIssue> epicIssues, List<KPIExcelData> excelDataList) {
+			Map<String, JiraIssue> epicIssues, List<KPIExcelData> excelDataList,
+			JiraIssueReleaseStatus jiraIssueReleaseStatus, Map<String, List<JiraIssue>> epicWiseJiraIssues) {
 		epicWiseIssueSize.forEach((epicNumber, issue) -> {
 			KPIExcelData excelData = new KPIExcelData();
+			List<JiraIssue> jiraIssueList = epicWiseJiraIssues.get(epicNumber);
 			JiraIssue jiraIssue = epicIssues.get(epicNumber);
 			if (jiraIssue != null) {
+				// filter by to do category
+				List<JiraIssue> toDoJiraIssue = ReleaseKpiHelper.filterIssuesByStatus(jiraIssueList,
+						jiraIssueReleaseStatus.getToDoList());
+				// filter by inProgress category
+				List<JiraIssue> inProgressJiraIssue = ReleaseKpiHelper.filterIssuesByStatus(jiraIssueList,
+						jiraIssueReleaseStatus.getInProgressList());
+				// filter by done category
+				List<JiraIssue> doneJiraIssue = ReleaseKpiHelper.filterIssuesByStatus(jiraIssueList,
+						jiraIssueReleaseStatus.getClosedList());
+				Integer totalJiraSize = toDoJiraIssue.size() + inProgressJiraIssue.size() + doneJiraIssue.size();
+				double toDoPercentage = roundingOff((100.0d * toDoJiraIssue.size()) / totalJiraSize);
+				double inProgressPercentage = roundingOff((100.0d * inProgressJiraIssue.size()) / totalJiraSize);
+				double donePercentage = roundingOff((100.0d * doneJiraIssue.size()) / totalJiraSize);
 				Map<String, String> storyDetails = new HashMap<>();
 				storyDetails.put(epicNumber, checkEmptyURL(jiraIssue));
 				excelData.setEpicID(storyDetails);
 				excelData.setEpicName(checkEmptyName(jiraIssue));
+				excelData.setToDo(new StringBuilder().append(toDoJiraIssue.size()).append("/").append(toDoPercentage)
+						.append("%").toString());
+				excelData.setInProgress(new StringBuilder().append(inProgressJiraIssue.size()).append("/")
+						.append(inProgressPercentage).append("%").toString());
+				excelData.setDone(new StringBuilder().append(doneJiraIssue.size()).append("/").append(donePercentage)
+						.append("%").toString());
 				excelData.setEpicStatus(
 						StringUtils.isNotEmpty(jiraIssue.getStatus()) ? jiraIssue.getStatus() : Constant.BLANK);
 				excelData.setStoryPoint(issue);
@@ -1778,17 +2045,178 @@ public class KPIExcelUtility {
 		});
 	}
 
+	/**
+	 * Method to populate Modal Window of Mean Time to Recover
+	 *
+	 * @param projectName
+	 *            Name of Project
+	 * @param meanTimeRecoverMapTimeWise
+	 *            Map<String, List<MeanTimeRecoverData>>
+	 * @param kpiExcelData
+	 *            List<KPIExcelData>
+	 */
+	public static void populateMeanTimeToRecoverExcelData(String projectName,
+			Map<String, List<MeanTimeRecoverData>> meanTimeRecoverMapTimeWise, List<KPIExcelData> kpiExcelData) {
+		if (MapUtils.isNotEmpty(meanTimeRecoverMapTimeWise)) {
+			meanTimeRecoverMapTimeWise.forEach((weekOrMonthName,
+					meanRecoverListCurrentTime) -> meanRecoverListCurrentTime.forEach(meanTimeRecoverData -> {
+						KPIExcelData excelData = new KPIExcelData();
+						excelData.setProjectName(projectName);
+						excelData.setDate(weekOrMonthName);
+						Map<String, String> issueDetails = new HashMap<>();
+						issueDetails.put(meanTimeRecoverData.getStoryID(),
+								StringUtils.isEmpty(meanTimeRecoverData.getUrl()) ? Constant.EMPTY_STRING
+										: meanTimeRecoverData.getUrl());
+						excelData.setStoryId(issueDetails);
+						excelData.setIssueType(meanTimeRecoverData.getIssueType());
+						excelData.setIssueDesc(meanTimeRecoverData.getDesc());
+						excelData.setCompletionDate(meanTimeRecoverData.getClosedDate());
+						excelData.setCreatedDate(meanTimeRecoverData.getCreatedDate());
+						excelData.setTimeToRecover(meanTimeRecoverData.getTimeToRecover());
+						kpiExcelData.add(excelData);
+					}));
+		}
+
+	}
+
+	public static void populateFlowEfficiency(LinkedHashMap<JiraIssueCustomHistory, Double> flowEfficiency,
+			List<String> waitTimeList, List<String> totalTimeList, List<KPIExcelData> excelDataList) {
+		AtomicInteger i = new AtomicInteger();
+		flowEfficiency.forEach((issue, value) -> {
+			KPIExcelData kpiExcelData = new KPIExcelData();
+			Map<String, String> url = new HashMap<>();
+			url.put(issue.getStoryID(), checkEmptyURL(issue));
+			kpiExcelData.setIssueID(url);
+			kpiExcelData.setIssueType(issue.getStoryType());
+			kpiExcelData.setIssueDesc(issue.getDescription());
+			kpiExcelData.setSizeInStoryPoints(issue.getEstimate());
+			kpiExcelData.setWaitTime(waitTimeList.get(i.get()));
+			kpiExcelData.setTotalTime(totalTimeList.get(i.get()));
+			kpiExcelData.setFlowEfficiency(value.longValue());
+			excelDataList.add(kpiExcelData);
+			i.set(i.get() + 1);
+		});
+	}
+
+	/**
+	 * Method to populate the Release BurnUp Excel
+	 *
+	 * @param jiraIssues
+	 *            jiraIssues
+	 * @param issueWiseReleaseTagDateMap
+	 *            issueWiseReleaseTagDateMap
+	 * @param completeDateIssueMap
+	 *            completeDateIssueMap
+	 * @param devCompleteDateIssueMap
+	 *            devCompleteDateIssueMap
+	 * @param kpiExcelData
+	 *            kpiExcelData
+	 * @param fieldMapping
+	 *            fieldMapping
+	 */
+	public static void populateReleaseBurnUpExcelData(List<JiraIssue> jiraIssues,
+			Map<String, LocalDate> issueWiseReleaseTagDateMap, Map<String, LocalDate> completeDateIssueMap,
+			Map<String, LocalDate> devCompleteDateIssueMap, List<KPIExcelData> kpiExcelData,
+			FieldMapping fieldMapping) {
+		if (CollectionUtils.isNotEmpty(jiraIssues)) {
+			jiraIssues.forEach(jiraIssue -> {
+				KPIExcelData excelData = new KPIExcelData();
+				Map<String, String> issueDetails = new HashMap<>();
+				issueDetails.put(jiraIssue.getNumber(), checkEmptyURL(jiraIssue));
+				excelData.setIssueID(issueDetails);
+				excelData.setIssueDesc(checkEmptyName(jiraIssue));
+				excelData.setIssueStatus(jiraIssue.getStatus());
+				excelData.setIssueType(jiraIssue.getTypeName());
+				populateAssignee(jiraIssue, excelData);
+				excelData.setPriority(jiraIssue.getPriority());
+				if (StringUtils.isNotEmpty(fieldMapping.getEstimationCriteria())
+						&& fieldMapping.getEstimationCriteria().equalsIgnoreCase(CommonConstant.STORY_POINT)) {
+					double roundingOff = roundingOff(Optional.ofNullable(jiraIssue.getStoryPoints()).orElse(0.0));
+					excelData.setStoryPoint(Double.toString(roundingOff));
+				} else if (null != jiraIssue.getAggregateTimeOriginalEstimateMinutes()) {
+					double totalOriginalEstimate = Double.valueOf(jiraIssue.getAggregateTimeOriginalEstimateMinutes())
+							/ 60;
+					excelData.setStoryPoint(
+							roundingOff(totalOriginalEstimate / fieldMapping.getStoryPointToHourMapping()) + "/"
+									+ roundingOff(totalOriginalEstimate) + " hrs");
+				}
+				excelData.setLatestReleaseTagDate(DateUtil.dateTimeConverter(
+						String.valueOf(issueWiseReleaseTagDateMap.get(jiraIssue.getNumber())), DateUtil.DATE_FORMAT,
+						DateUtil.DISPLAY_DATE_FORMAT));
+				excelData.setDevCompleteDate(
+						DateUtil.dateTimeConverter(String.valueOf(devCompleteDateIssueMap.get(jiraIssue.getNumber())),
+								DateUtil.DATE_FORMAT, DateUtil.DISPLAY_DATE_FORMAT));
+				excelData.setCompletionDate(
+						DateUtil.dateTimeConverter(String.valueOf(completeDateIssueMap.get(jiraIssue.getNumber())),
+								DateUtil.DATE_FORMAT, DateUtil.DISPLAY_DATE_FORMAT));
+				kpiExcelData.add(excelData);
+			});
+		}
+
+	}
+
+	public static void populateBackLogData(List<IterationKpiModalValue> overAllmodalValues,
+			List<IterationKpiModalValue> modalValues, JiraIssue jiraIssue, JiraIssueCustomHistory jiraCustomHistory,
+			List<String> status) {
+		IterationKpiModalValue iterationKpiModalValue = new IterationKpiModalValue();
+		iterationKpiModalValue.setIssueType(jiraIssue.getTypeName());
+		iterationKpiModalValue.setIssueURL(jiraIssue.getUrl());
+		iterationKpiModalValue.setIssueId(jiraIssue.getNumber());
+		iterationKpiModalValue.setDescription(jiraIssue.getName());
+		iterationKpiModalValue.setPriority(jiraIssue.getPriority());
+		if (ObjectUtils.isNotEmpty(jiraCustomHistory.getCreatedDate()))
+			iterationKpiModalValue.setCreatedDate(DateUtil
+					.dateTimeFormatter(jiraCustomHistory.getCreatedDate().toDate(), DateUtil.DISPLAY_DATE_FORMAT));
+		Optional<JiraHistoryChangeLog> sprint = jiraCustomHistory.getStatusUpdationLog().stream().filter(
+				sprintDetails -> CollectionUtils.isNotEmpty(status) && status.contains(sprintDetails.getChangedTo()))
+				.sorted(Comparator.comparing(JiraHistoryChangeLog::getUpdatedOn)).findFirst();
+		if (sprint.isPresent()) {
+			iterationKpiModalValue
+					.setDorDate(DateUtil.dateTimeFormatter(sprint.get().getUpdatedOn(), DateUtil.DISPLAY_DATE_FORMAT));
+		}
+		iterationKpiModalValue.setIssueSize(Optional.ofNullable(jiraIssue.getStoryPoints()).orElse(0.0).toString());
+		overAllmodalValues.add(iterationKpiModalValue);
+		modalValues.add(iterationKpiModalValue);
+	}
+
 	private static void setSquads(KPIExcelData excelData, JiraIssue jiraIssue) {
 		if (CollectionUtils.isNotEmpty(jiraIssue.getAdditionalFilters())) {
-			excelData
-					.setSquads(jiraIssue
-							.getAdditionalFilters().stream().flatMap(additionalFilter -> additionalFilter
-									.getFilterValues().stream().map(AdditionalFilterValue::getValue))
-							.collect(Collectors.toList()));
+			excelData.setSquads(jiraIssue.getAdditionalFilters().stream().flatMap(additionalFilter -> additionalFilter
+					.getFilterValues().stream().map(AdditionalFilterValue::getValue)).toList());
 
 		} else {
-			excelData.setSquads(Arrays.asList(Constant.DASH));
+			excelData.setSquads(List.of(Constant.DASH));
 		}
 	}
 
+	public static void populateReleasePlanExcelData(List<JiraIssue> jiraIssues, List<KPIExcelData> kpiExcelData,
+			FieldMapping fieldMapping) {
+		if (CollectionUtils.isNotEmpty(jiraIssues)) {
+			jiraIssues.forEach(jiraIssue -> {
+				KPIExcelData excelData = new KPIExcelData();
+				Map<String, String> issueDetails = new HashMap<>();
+				issueDetails.put(jiraIssue.getNumber(), checkEmptyURL(jiraIssue));
+				excelData.setIssueID(issueDetails);
+				excelData.setIssueDesc(checkEmptyName(jiraIssue));
+				excelData.setIssueStatus(jiraIssue.getStatus());
+				excelData.setIssueType(jiraIssue.getTypeName());
+				populateAssignee(jiraIssue, excelData);
+				excelData.setPriority(jiraIssue.getPriority());
+				if (StringUtils.isNotEmpty(fieldMapping.getEstimationCriteria())
+						&& fieldMapping.getEstimationCriteria().equalsIgnoreCase(CommonConstant.STORY_POINT)) {
+					double roundingOff = roundingOff(Optional.ofNullable(jiraIssue.getStoryPoints()).orElse(0.0));
+					excelData.setStoryPoint(Double.toString(roundingOff));
+				} else if (null != jiraIssue.getAggregateTimeOriginalEstimateMinutes()) {
+					double totalOriginalEstimate = Double.valueOf(jiraIssue.getAggregateTimeOriginalEstimateMinutes())
+							/ 60;
+					excelData.setStoryPoint(
+							roundingOff(totalOriginalEstimate / fieldMapping.getStoryPointToHourMapping()) + "/"
+									+ roundingOff(totalOriginalEstimate) + " hrs");
+				}
+				excelData.setDueDate((StringUtils.isNotEmpty(jiraIssue.getDueDate())) ? DateUtil.dateTimeConverter(
+						jiraIssue.getDueDate(), DateUtil.TIME_FORMAT_WITH_SEC, DateUtil.DISPLAY_DATE_FORMAT) : "-");
+				kpiExcelData.add(excelData);
+			});
+		}
+	}
 }
